use relative paths

--- a/docs/examples/duqtools_in_docker.ipynb
+++ b/docs/examples/duqtools_in_docker.ipynb
@@ -1,14 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "97d8f83d-ea4a-481a-9bee-45f3f56d6bac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import atexit\n",
+    "from contextlib import contextmanager\n",
+    "import os\n",
+    "import shutil\n",
+    "import signal\n",
+    "import stat\n",
+    "import docker"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "27cc4015-a40a-48b1-b347-22edf81d4023",
    "metadata": {},
    "source": [
     "# Running duqtools with docker containers\n",
     "\n",
-    "This Tutorial uses docker to create and submit runs which will be analyzed with duqtools. \n",
-    "This notebook uses the `bash_kernel` which can be installed via pip: https://github.com/takluyver/bash_kernel\n"
+    "This Tutorial uses docker to create and submit runs which will be analyzed with duqtools. "
    ]
   },
   {
@@ -35,38 +50,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "43b7df6e-c604-4afc-8b47-790269c38685",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm -rf example\n",
-    "!mkdir -p example/template\n",
+    "shutil.rmtree('./example',ignore_errors=True)\n",
+    "os.mkdir('example')\n",
     "# We assume that the duqtools source is available and that we are in the docs/examples folder\n",
-    "!cp -r ../../tests/test_data/template_model/* example/template"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "739d93e4-2a58-49c7-b315-21c0168674cc",
-   "metadata": {},
-   "source": [
-    "### Some imas data, substitute with your own, as we are not allowed to provide it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "cca22504-8102-4ad7-9c9d-03693225870b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cp -r ../../../containerized_runs/imasdb example"
+    "shutil.copytree('../../tests/test_data/template_model','example/template');"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "cca22504-8102-4ad7-9c9d-03693225870b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Some imas data, substitute with your own, as we are not allowed to provide it\n",
+    "shutil.copytree('../../../containerized_runs/imasdb','example/imasdb');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "c31f7f56-7890-4eaf-8616-53f6fc1ae47f",
    "metadata": {},
    "outputs": [],
@@ -85,17 +93,20 @@
     "\n",
     "exec \"${@}\"\n",
     "\"\"\")\n",
+    "\n",
+    "st = os.stat('example/entry.sh')\n",
+    "os.chmod('example/entry.sh', st.st_mode | stat.S_IEXEC)\n",
     "!chmod +x example/entry.sh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9b8b4694-1a11-405a-a67b-fcf88b73b173",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A silly script to support venvs\n",
+    "# A simple configuration file for duqtools\n",
     "with open(\"example/duqtools.yaml\", \"w\") as f:\n",
     "    f.write(\"\"\"system: jetto\n",
     "create:\n",
@@ -119,12 +130,13 @@
     "    n_samples: 3\n",
     "submit:\n",
     "  submit_system: docker\n",
+    "  docker_image: jintrac-imas:latest\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0ae5b521-4411-43cb-bbb1-3aefa6b38bd9",
    "metadata": {},
    "outputs": [
@@ -149,21 +161,22 @@
       "    ├── jetto.jset\n",
       "    ├── jetto.sgrid\n",
       "    ├── jetto.sin\n",
+      "    ├── jintrac_imas_config.cfg\n",
       "    ├── \u001b[01;32mrjettov\u001b[0m\n",
       "    └── \u001b[01;32mutils_jetto\u001b[0m\n",
       "\n",
-      "5 directories, 13 files\n"
+      "5 directories, 14 files\n"
      ]
     }
    ],
    "source": [
-    "!tree example"
+    "!tree example #Its okay if this fails if you don't have tree installed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d8ad225a-560a-42e4-b55a-c6a002a56421",
+   "execution_count": 7,
+   "id": "75833eb6-1464-453b-99ec-d03a642868b3",
    "metadata": {},
    "outputs": [
     {
@@ -187,43 +200,79 @@
     "# Get the image and tag it\n",
     "!docker login gitlab.eufus.psnc.pl:5050\n",
     "!docker pull gitlab.eufus.psnc.pl:5050/containerization/jintrac/jintrac-imas-installer/jintrac-imas:latest\n",
-    "!docker tag gitlab.eufus.psnc.pl:5050/containerization/jintrac/jintrac-imas-installer/jintrac-imas:latest jintrac-imas:latest"
+    "!docker tag gitlab.eufus.psnc.pl:5050/containerization/jintrac/jintrac-imas-installer/jintrac-imas:latest jintrac-imas:pulled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "19d86942-176b-4816-b45e-80cdc771f9db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending build context to Docker daemon  2.048kB\n",
+      "Step 1/3 : from jintrac-imas:pulled\n",
+      " ---> 485c383ea483\n",
+      "Step 2/3 : run sed -i 's/mpi4py/mpi4py PyYAML/g' /home/docker/jintrac/build/python/run_python_driver\n",
+      " ---> Using cache\n",
+      " ---> e4f0778c0bb4\n",
+      "Step 3/3 : run chmod 777 /home/docker\n",
+      " ---> Using cache\n",
+      " ---> 7117c572e221\n",
+      "Successfully built 7117c572e221\n",
+      "Successfully tagged jintrac-imas:latest\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Do some hotfixing\n",
+    "!echo -e \"from jintrac-imas:pulled\\n\\\n",
+    "run sed -i 's/mpi4py/mpi4py PyYAML/g' /home/docker/jintrac/build/python/run_python_driver\\n\\\n",
+    "run chmod 777 /home/docker\" | docker build -t jintrac-imas:latest -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "5ee5e4e0-c04c-49f5-b92c-41d6559725dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import docker\n",
-    "import os\n",
     "niceprint = lambda s: print(str(s.output,\"utf-8\"))\n",
     "run_inside = lambda container, cmd: container.exec_run(\" \".join(['/example/entry.sh',cmd]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "f9b353a8-db66-4e4e-9316-428cb69fe257",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# clean up existing container\n",
+    "try:\n",
+    "    container.stop(timeout=0)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
     "client = docker.from_env()\n",
-    "container = client.containers.run('jintrac-imas', \n",
+    "container = client.containers.run('jintrac-imas:latest', \n",
     "                                  working_dir=\"/example\", \n",
     "                                  user=os.getuid(),\n",
     "                                  detach=True, \n",
     "                                  entrypoint=\"/example/entry.sh\",\n",
     "                                  command=\"tail -f /dev/null\",\n",
     "                                  volumes=[os.getcwd()+\"/example:/example\"],\n",
-    "                                  auto_remove=True)"
+    "                                  auto_remove=True)\n",
+    "atexit.register(lambda: container.stop(timeout=0));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "da1c3bfe-1de4-42ec-97d5-3f38f7d9fe1f",
    "metadata": {},
    "outputs": [],
@@ -233,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ee17e7c6-8977-4950-810d-98f10e68a9b0",
    "metadata": {},
    "outputs": [
@@ -241,8 +290,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: The directory '/home/docker/.cache/pip' or its parent directory is not owned or is not writable by the current user. The cache has been disabled. Check the permissions and owner of that directory. If executing pip with sudo, you may want sudo's -H flag.\n",
-      "WARNING: Retrying (Retry(total=4, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<pip._vendor.urllib3.connection.HTTPSConnection object at 0x7fb6a46fe970>: Failed to establish a new connection: [Errno -2] Name or service not known')': /simple/duqtools/\n",
       "WARNING: You are using pip version 20.2.4; however, version 23.0.1 is available.\n",
       "You should consider upgrading via the '/example/.venv/bin/python3 -m pip install --upgrade pip' command.\n",
       "\n"
@@ -255,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "d35bb6a6-56d1-485a-9d7c-2b636f926665",
    "metadata": {},
    "outputs": [
@@ -263,27 +310,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33m15:17:16 [WARNING] Python module 'omas' not found. Submodule 'jams' needs it @jams.py:14\u001b[0m\n",
-      "\u001b[33m15:17:16 [WARNING] Python module 'netCDF4' not found. Submodule 'transp' needs it @transp.py:25\u001b[0m\n",
-      "\u001b[33m15:17:16 [WARNING] Python module 'tkinter' not found. Submodule 'tkinter_helpers' needs it @tkinter_helpers.py:16\u001b[0m\n",
+      "\u001b[33m14:19:08 [WARNING] Python module 'omas' not found. Submodule 'jams' needs it @jams.py:14\u001b[0m\n",
+      "\u001b[33m14:19:08 [WARNING] Python module 'netCDF4' not found. Submodule 'transp' needs it @transp.py:25\u001b[0m\n",
+      "\u001b[33m14:19:08 [WARNING] Python module 'tkinter' not found. Submodule 'tkinter_helpers' needs it @tkinter_helpers.py:16\u001b[0m\n",
       "\n",
       "\u001b[31m\u001b[1mOperations in the Queue:\u001b[0m\n",
       "\u001b[31m\u001b[1m========================\u001b[0m\n",
       "- \u001b[32mCreating run\u001b[0m : /example/run_0000\n",
       "- \u001b[32mCreating run\u001b[0m : /example/run_0001\n",
       "- \u001b[32mCreating run\u001b[0m : /example/run_0002\n",
-      "\u001b[31m\u001b[1mApplying Operations\u001b[0m\n",
       "21\n",
+      "\u001b[31m\u001b[1mApplying Operations\u001b[0m\n",
       "\n",
       "  0%|          | 0/21 [00:00<?, ?it/s]\u001b[A\n",
       "\u001b[32mCreating run\u001b[0m : /example/run_0000: it/s]\u001b[A\n",
-      "Progress:  10%|▉         | 2/21 [00:00<00:04,  4.20it/s]\u001b[A\n",
-      "\u001b[32mCreating run\u001b[0m : /example/run_0001: 2,  7.73it/s]\u001b[A\n",
-      "Progress:  38%|███▊      | 8/21 [00:00<00:01,  8.94it/s]\u001b[A\n",
-      "\u001b[32mCreating run\u001b[0m : /example/run_0002: 01,  9.87it/s]\u001b[A\n",
-      "Progress:  67%|██████▋   | 14/21 [00:01<00:00,  9.59it/s]\u001b[A\n",
-      "\u001b[32mCreating run\u001b[0m : /example/run_0002: 00, 12.15it/s]\u001b[A\n",
-      "Progress: 100%|██████████| 21/21 [00:01<00:00, 11.97it/s]\n",
+      "Progress:  10%|▉         | 2/21 [00:00<00:04,  4.07it/s]\u001b[A\n",
+      "\u001b[32mCreating run\u001b[0m : /example/run_0001: 1,  9.66it/s]\u001b[A\n",
+      "Progress:  38%|███▊      | 8/21 [00:00<00:01,  8.98it/s]\u001b[A\n",
+      "\u001b[32mCreating run\u001b[0m : /example/run_0002: 01, 10.19it/s]\u001b[A\n",
+      "Progress:  67%|██████▋   | 14/21 [00:01<00:00, 10.03it/s]\u001b[A\n",
+      "\u001b[32mCreating run\u001b[0m : /example/run_0002: 00, 12.78it/s]\u001b[A\n",
+      "Progress: 100%|██████████| 21/21 [00:01<00:00, 12.54it/s]\n",
       "\n"
      ]
     }
@@ -294,13 +341,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "ef6637a5-8e0d-4858-b6d2-ae2348dec789",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!cd example && duqtools submit --yes"
+    "#!cd example && duqtools submit --force --yes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7605f68-5d80-4f92-b6a8-f3172de154e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
