updated run in docker

--- a/docs/examples/duqtools_in_docker.ipynb
+++ b/docs/examples/duqtools_in_docker.ipynb
@@ -183,24 +183,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Authenticating with existing credentials...\n",
-      "WARNING! Your password will be stored unencrypted in /home/vikko/.docker/config.json.\n",
-      "Configure a credential helper to remove this warning. See\n",
-      "https://docs.docker.com/engine/reference/commandline/login/#credentials-store\n",
-      "\n",
-      "Login Succeeded\n",
-      "latest: Pulling from containerization/jintrac/jintrac-imas-installer/jintrac-imas\n",
-      "Digest: sha256:1b99ea457ba42bdd6809ef0069bf444ac2f8c3a1013ae9fe596da6f15987d584\n",
-      "Status: Image is up to date for gitlab.eufus.psnc.pl:5050/containerization/jintrac/jintrac-imas-installer/jintrac-imas:latest\n",
-      "gitlab.eufus.psnc.pl:5050/containerization/jintrac/jintrac-imas-installer/jintrac-imas:latest\n"
+      "HEAD is now at ab5a6fb [Build] Bump jintrac to v220922\n",
+      "Entering 'ITM_FLUSH'\n",
+      "Entering 'adas'\n",
+      "Entering 'adas-data'\n",
+      "Entering 'ascot'\n",
+      "Entering 'edge2d-eirene'\n",
+      "Entering 'eirene-data'\n",
+      "Entering 'eirene_iter'\n",
+      "Entering 'jetto-sanco'\n",
+      "Entering 'jetto-sanco/tci/transport/QLK'\n",
+      "Entering 'jetto-sanco/tci/transport/QLK/QuaLiKiz-matlabtools'\n",
+      "Entering 'jetto-sanco/tci/transport/QLK/QuaLiKiz-pythontools'\n",
+      "Entering 'jetto-sanco/tci/transport/QLK/lib/src/fruit'\n",
+      "Entering 'jetto-sanco/tci/transport/QLK/lib/src/fruitsh'\n",
+      "Entering 'jetto-sanco/tci/transport/QLK/tubs'\n",
+      "Entering 'jetto-sanco/tci/transport/QLKNN'\n",
+      "Entering 'jetto-sanco/tci/transport/QLKNN/lib/src/fruit'\n",
+      "Entering 'jetto-sanco/tci/transport/QLKNN/lib/src/fruitsh'\n",
+      "Entering 'jetto-sanco/tci/transport/QLKNN/tubs'\n",
+      "Entering 'jintrac'\n",
+      "Entering 'nag'\n",
+      "Entering 'pspline'\n",
+      "Entering 'pyal'\n"
      ]
     }
    ],
    "source": [
     "# Get the image and tag it\n",
-    "!docker login gitlab.eufus.psnc.pl:5050\n",
-    "!docker pull gitlab.eufus.psnc.pl:5050/containerization/jintrac/jintrac-imas-installer/jintrac-imas:latest\n",
-    "!docker tag gitlab.eufus.psnc.pl:5050/containerization/jintrac/jintrac-imas-installer/jintrac-imas:latest jintrac-imas:pulled"
+    "#!docker login gitlab.eufus.psnc.pl:5050\n",
+    "#!docker pull gitlab.eufus.psnc.pl:5050/containerization/jintrac/jintrac-imas-installer/jintrac-imas:latest\n",
+    "#!docker tag gitlab.eufus.psnc.pl:5050/containerization/jintrac/jintrac-imas-installer/jintrac-imas:latest jintrac-imas:pulled\n",
+    "\n",
+    "# Or, build the image yourself\n",
+    "# Follow setup instructions in README.md\n",
+    "!cd ~/local_projects/jintrac-imas-installer && git checkout ab5a6\n",
+    "!cd ~/local_projects/jintrac-imas-installer && git submodule update\n",
+    "!cd ~/local_projects/jintrac-imas-installer && git submodule foreach --recursive git clean -xffd\n",
+    "!cd ~/local_projects/jintrac-imas-installer && DOCKER_BUILDKIT=1 docker build --target jintrac-imas --tag jintrac-imas:ab5a6 . 2> /dev/null"
    ]
   },
   {
@@ -214,22 +234,22 @@
      "output_type": "stream",
      "text": [
       "Sending build context to Docker daemon  2.048kB\n",
-      "Step 1/3 : from jintrac-imas:pulled\n",
-      " ---> 485c383ea483\n",
+      "Step 1/3 : from jintrac-imas:ab5a6\n",
+      " ---> 4cd3896516f7\n",
       "Step 2/3 : run sed -i 's/mpi4py/mpi4py PyYAML/g' /home/docker/jintrac/build/python/run_python_driver\n",
       " ---> Using cache\n",
-      " ---> e4f0778c0bb4\n",
+      " ---> 245fba90e06d\n",
       "Step 3/3 : run chmod 777 /home/docker\n",
       " ---> Using cache\n",
-      " ---> 7117c572e221\n",
-      "Successfully built 7117c572e221\n",
+      " ---> d24430b985f4\n",
+      "Successfully built d24430b985f4\n",
       "Successfully tagged jintrac-imas:latest\n"
      ]
     }
    ],
    "source": [
     "# Do some hotfixing\n",
-    "!echo -e \"from jintrac-imas:pulled\\n\\\n",
+    "!echo -e \"from jintrac-imas:ab5a6\\n\\\n",
     "run sed -i 's/mpi4py/mpi4py PyYAML/g' /home/docker/jintrac/build/python/run_python_driver\\n\\\n",
     "run chmod 777 /home/docker\" | docker build -t jintrac-imas:latest -"
    ]
@@ -242,7 +262,7 @@
    "outputs": [],
    "source": [
     "niceprint = lambda s: print(str(s.output,\"utf-8\"))\n",
-    "run_inside = lambda container, cmd: container.exec_run(\" \".join(['/example/entry.sh',cmd]))"
+    "run_inside = lambda container, cmd, **kwargs: container.exec_run(\" \".join(['/example/entry.sh',cmd]),**kwargs)"
    ]
   },
   {
@@ -310,27 +330,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33m14:19:08 [WARNING] Python module 'omas' not found. Submodule 'jams' needs it @jams.py:14\u001b[0m\n",
-      "\u001b[33m14:19:08 [WARNING] Python module 'netCDF4' not found. Submodule 'transp' needs it @transp.py:25\u001b[0m\n",
-      "\u001b[33m14:19:08 [WARNING] Python module 'tkinter' not found. Submodule 'tkinter_helpers' needs it @tkinter_helpers.py:16\u001b[0m\n",
+      "\u001b[33m15:57:37 [WARNING] Python module 'omas' not found. Submodule 'jams' needs it @jams.py:14\u001b[0m\n",
+      "\u001b[33m15:57:37 [WARNING] Python module 'netCDF4' not found. Submodule 'transp' needs it @transp.py:25\u001b[0m\n",
+      "\u001b[33m15:57:37 [WARNING] Python module 'tkinter' not found. Submodule 'tkinter_helpers' needs it @tkinter_helpers.py:16\u001b[0m\n",
       "\n",
       "\u001b[31m\u001b[1mOperations in the Queue:\u001b[0m\n",
       "\u001b[31m\u001b[1m========================\u001b[0m\n",
-      "- \u001b[32mCreating run\u001b[0m : /example/run_0000\n",
-      "- \u001b[32mCreating run\u001b[0m : /example/run_0001\n",
-      "- \u001b[32mCreating run\u001b[0m : /example/run_0002\n",
-      "21\n",
+      "- \u001b[32mCreating run\u001b[0m : run_0000\n",
+      "- \u001b[32mCreating run\u001b[0m : run_0001\n",
+      "- \u001b[32mCreating run\u001b[0m : run_0002\n",
       "\u001b[31m\u001b[1mApplying Operations\u001b[0m\n",
+      "21\n",
       "\n",
       "  0%|          | 0/21 [00:00<?, ?it/s]\u001b[A\n",
-      "\u001b[32mCreating run\u001b[0m : /example/run_0000: it/s]\u001b[A\n",
-      "Progress:  10%|▉         | 2/21 [00:00<00:04,  4.07it/s]\u001b[A\n",
-      "\u001b[32mCreating run\u001b[0m : /example/run_0001: 1,  9.66it/s]\u001b[A\n",
-      "Progress:  38%|███▊      | 8/21 [00:00<00:01,  8.98it/s]\u001b[A\n",
-      "\u001b[32mCreating run\u001b[0m : /example/run_0002: 01, 10.19it/s]\u001b[A\n",
-      "Progress:  67%|██████▋   | 14/21 [00:01<00:00, 10.03it/s]\u001b[A\n",
-      "\u001b[32mCreating run\u001b[0m : /example/run_0002: 00, 12.78it/s]\u001b[A\n",
-      "Progress: 100%|██████████| 21/21 [00:01<00:00, 12.54it/s]\n",
+      "\u001b[32mCreating run\u001b[0m : run_0000: 0:00<?, ?it/s]\u001b[A\n",
+      "Progress:  10%|▉         | 2/21 [00:00<00:04,  4.65it/s]\u001b[A\n",
+      "\u001b[32mCreating run\u001b[0m : run_0001: 0:00<00:01, 10.78it/s]\u001b[A\n",
+      "Progress:  38%|███▊      | 8/21 [00:00<00:01,  9.52it/s]\u001b[A\n",
+      "\u001b[32mCreating run\u001b[0m : run_0002: 00:01<00:00, 12.94it/s]\u001b[A\n",
+      "Progress:  67%|██████▋   | 14/21 [00:01<00:00, 10.92it/s]\u001b[A\n",
+      "\u001b[32mCreating run\u001b[0m : run_0002: 00:01<00:00, 13.87it/s]\u001b[A\n",
+      "Progress: 100%|██████████| 21/21 [00:01<00:00, 13.86it/s]\n",
       "\n"
      ]
     }
@@ -344,18 +364,95 @@
    "execution_count": 14,
    "id": "ef6637a5-8e0d-4858-b6d2-ae2348dec789",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m16:57:40 [WARNING] Python module 'omas' not found. Submodule 'jams' needs it @jams.py:14\u001b[0m\n",
+      "\u001b[33m16:57:40 [WARNING] Python module 'netCDF4' not found. Submodule 'transp' needs it @transp.py:25\u001b[0m\n",
+      "\n",
+      "\u001b[31m\u001b[1mOperations in the Queue:\u001b[0m\n",
+      "\u001b[31m\u001b[1m========================\u001b[0m\n",
+      "- \u001b[32mSubmitting\u001b[0m : Job('/home/vikko/local_projects/duqtools/docs/examples/example/run_0000')\n",
+      "- \u001b[32mSubmitting\u001b[0m : Job('/home/vikko/local_projects/duqtools/docs/examples/example/run_0001')\n",
+      "- \u001b[32mSubmitting\u001b[0m : Job('/home/vikko/local_projects/duqtools/docs/examples/example/run_0002')\n",
+      "\u001b[31m\u001b[1mApplying Operations\u001b[0m\n",
+      "3\n",
+      "\n",
+      "  0%|                                                     | 0/3 [00:00<?, ?it/s]\u001b[A\n",
+      "\u001b[32mSubmitting\u001b[0m : Job('/home/vikko/local_projects/duqtools/docs/examples/example/run_0000'): \n",
+      "\u001b[32mSubmitting\u001b[0m : Job('/home/vikko/local_projects/duqtools/docs/examples/example/run_0001'): \n",
+      "\u001b[32mSubmitting\u001b[0m : Job('/home/vikko/local_projects/duqtools/docs/examples/example/run_0002'): \n",
+      "\u001b[32mSubmitting\u001b[0m : Job('/home/vikko/local_projects/duqtools/docs/examples/example/run_0002'): \n",
+      "Progress: 100%|███████████████████████████████████| 3/3 [00:01<00:00,  2.13it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cd example && duqtools submit --force --yes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f5f4a241-5c42-4750-9100-a3cfcb885331",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m16:57:43 [WARNING] Python module 'omas' not found. Submodule 'jams' needs it @jams.py:14\u001b[0m\n",
+      "\u001b[33m16:57:43 [WARNING] Python module 'netCDF4' not found. Submodule 'transp' needs it @transp.py:25\u001b[0m\n",
+      "Total number of directories with submit script     : 3\n",
+      "Total number of directories with unsubmitted jobs  : 0\n",
+      "Total number of directories with status script     : 3\n",
+      "Total number of directories with completed status  : 0\n",
+      "Total number of directories with failed status     : 0\n",
+      "Total number of directories with running status    : 3\n",
+      "Total number of directories with unknown status    : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cd example && duqtools status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "424f1444-e10d-4ba4-b83a-19f5f5bc9bab",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#!cd example && duqtools submit --force --yes"
+    "execresults =run_inside(container,'duqtools dash', stream=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7605f68-5d80-4f92-b6a8-f3172de154e0",
+   "id": "d606bf18-983d-463f-b9f1-547431b9de52",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  You can now view your Streamlit app in your browser.\n",
+      "\n",
+      "  Network URL: http://172.17.0.4:8501\n",
+      "  External URL: http://192.87.183.233:8501\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in execresults.output:\n",
+    "    print(x.decode())"
+   ]
   }
  ],
  "metadata": {
