bit more info on get_all_variables

--- a/docs/examples/xarray.ipynb
+++ b/docs/examples/xarray.ipynb
@@ -1235,7 +1235,7 @@
     }
    ],
    "source": [
-    "handle.get_all_variables()"
+    "handle.get_all_variables(extra_variables=[],ids='core_profiles')"
    ]
   },
   {
